@@ -15,60 +15,54 @@
  */
 package edu.kit.datamanager.metastore2.oaipmh.service;
 
-import edu.kit.datamanager.metastore2.configuration.ApplicationProperties;
 import edu.kit.datamanager.metastore2.configuration.MetastoreConfiguration;
+import edu.kit.datamanager.metastore2.configuration.OaiPmhConfiguration;
 import edu.kit.datamanager.metastore2.dao.IDataRecordDao;
 import edu.kit.datamanager.metastore2.dao.IMetadataFormatDao;
 import edu.kit.datamanager.metastore2.domain.DataRecord;
 import edu.kit.datamanager.metastore2.domain.oaipmh.MetadataFormat;
-import edu.kit.datamanager.metastore2.configuration.OaiPmhConfiguration;
 import edu.kit.datamanager.metastore2.oaipmh.util.OAIPMHBuilder;
 import edu.kit.datamanager.repo.util.DataResourceUtils;
 import edu.kit.datamanager.util.xml.DataCiteMapper;
 import edu.kit.datamanager.util.xml.DublinCoreMapper;
-import java.io.ByteArrayInputStream;
-import java.io.ByteArrayOutputStream;
-import java.io.IOException;
-import java.io.InputStream;
-import java.io.UnsupportedEncodingException;
-import java.math.BigInteger;
-import java.net.URISyntaxException;
-import java.net.URL;
-import java.net.URLDecoder;
-import java.net.URLEncoder;
-import java.nio.file.Paths;
-import java.time.Instant;
-import java.time.temporal.ChronoUnit;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Date;
-import java.util.List;
-import java.util.Optional;
-import java.util.function.Function;
-import javax.xml.bind.JAXBContext;
-import javax.xml.bind.JAXBException;
-import javax.xml.bind.Marshaller;
-import javax.xml.parsers.DocumentBuilder;
-import javax.xml.parsers.DocumentBuilderFactory;
-import javax.xml.parsers.ParserConfigurationException;
+import jakarta.xml.bind.JAXBContext;
+import jakarta.xml.bind.JAXBException;
+import jakarta.xml.bind.Marshaller;
 import org.apache.commons.codec.binary.Base64;
 import org.apache.commons.io.FileUtils;
 import org.apache.commons.io.IOUtils;
 import org.datacite.schema.kernel_4.Resource;
-import org.openarchives.oai._2.DeletedRecordType;
-import org.openarchives.oai._2.DescriptionType;
-import org.openarchives.oai._2.GranularityType;
-import org.openarchives.oai._2.MetadataFormatType;
-import org.openarchives.oai._2.OAIPMHerrorcodeType;
-import org.openarchives.oai._2.ResumptionTokenType;
+import org.openarchives.oai._2.*;
 import org.purl.dc.elements._1.ElementContainer;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.data.domain.Example;
+import org.springframework.data.domain.ExampleMatcher;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.stereotype.Component;
 import org.springframework.web.servlet.support.ServletUriComponentsBuilder;
 import org.w3c.dom.Document;
 import org.xml.sax.SAXException;
+
+import javax.xml.parsers.DocumentBuilder;
+import javax.xml.parsers.DocumentBuilderFactory;
+import javax.xml.parsers.ParserConfigurationException;
+import java.io.ByteArrayInputStream;
+import java.io.ByteArrayOutputStream;
+import java.io.IOException;
+import java.io.InputStream;
+import java.math.BigInteger;
+import java.net.URI;
+import java.net.URISyntaxException;
+import java.net.URL;
+import java.net.URLDecoder;
+import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
+import java.nio.file.Paths;
+import java.time.Instant;
+import java.time.temporal.ChronoUnit;
+import java.util.*;
+import java.util.function.UnaryOperator;
 
 /**
  * Simple OAI-PMH repository implementation taking its information from a KIT
@@ -99,28 +93,38 @@ import org.xml.sax.SAXException;
  * @author jejkal
  */
 @Component
+@SuppressWarnings("JavaUtilDate")
 public class MetastoreOAIPMHRepository extends AbstractOAIPMHRepository {
 
   private static final org.slf4j.Logger LOGGER = LoggerFactory.getLogger(MetastoreOAIPMHRepository.class);
 
-  private MetadataFormatType DC_SCHEMA;
-  private MetadataFormatType DATACITE_SCHEMA;
+  private static final MetadataFormatType DC_SCHEMA;
+  private static final MetadataFormatType DATACITE_SCHEMA;
 
-  private OaiPmhConfiguration pluginConfiguration;
+  private final OaiPmhConfiguration pluginConfiguration;
 
-  @Autowired
-  private ApplicationProperties metastoreProperties;
   @Autowired
   private IDataRecordDao dataRecordDao;
   @Autowired
   private IMetadataFormatDao metadataFormatDao;
   @Autowired
-  private OaiPmhConfiguration oaiConfigProperties;
-  @Autowired
   private MetastoreConfiguration metadataConfig;
+  
+  static {
+    DC_SCHEMA = new MetadataFormatType();
+    DC_SCHEMA.setMetadataNamespace("http://www.openarchives.org/OAI/2.0/oai_dc/");
+    DC_SCHEMA.setSchema("http://www.openarchives.org/OAI/2.0/oai_dc.xsd");
+    DC_SCHEMA.setMetadataPrefix("oai_dc");
+
+    DATACITE_SCHEMA = new MetadataFormatType();
+    DATACITE_SCHEMA.setMetadataNamespace("http://datacite.org/schema/kernel-4");
+    DATACITE_SCHEMA.setSchema("http://schema.datacite.org/meta/kernel-4.1/metadata.xsd");
+    DATACITE_SCHEMA.setMetadataPrefix("datacite");
+  }
 
   /**
    * Default constructor.
+   * @param pluginConfiguration configuration for OAI-PMH.
    */
   @Autowired
   public MetastoreOAIPMHRepository(OaiPmhConfiguration pluginConfiguration) {
@@ -131,19 +135,11 @@ public class MetastoreOAIPMHRepository extends AbstractOAIPMHRepository {
    * Default constructor.
    *
    * @param name The repository name.
+   * @param pluginConfiguration configuration for OAI-PMH.
    */
   private MetastoreOAIPMHRepository(String name, OaiPmhConfiguration pluginConfiguration) {
     super(name);
     this.pluginConfiguration = pluginConfiguration;
-    DC_SCHEMA = new MetadataFormatType();
-    DC_SCHEMA.setMetadataNamespace("http://www.openarchives.org/OAI/2.0/oai_dc/");
-    DC_SCHEMA.setSchema("http://www.openarchives.org/OAI/2.0/oai_dc.xsd");
-    DC_SCHEMA.setMetadataPrefix("oai_dc");
-
-    DATACITE_SCHEMA = new MetadataFormatType();
-    DATACITE_SCHEMA.setMetadataNamespace("http://datacite.org/schema/kernel-4");
-    DATACITE_SCHEMA.setSchema("http://schema.datacite.org/meta/kernel-4.1/metadata.xsd");
-    DATACITE_SCHEMA.setMetadataPrefix("datacite");
   }
 
   @Override
@@ -158,12 +154,12 @@ public class MetastoreOAIPMHRepository extends AbstractOAIPMHRepository {
 
   @Override
   public List<String> getAdminEmail() {
-    return Arrays.asList(pluginConfiguration.getAdminEmail());
+    return Collections.singletonList(pluginConfiguration.getAdminEmail());
   }
 
   @Override
   public String getEarliestDatestamp() {
-    return getDateFormat().format(new Date(0l));
+    return getDateFormat().format(new Date(0L));
   }
 
   @Override
@@ -181,13 +177,15 @@ public class MetastoreOAIPMHRepository extends AbstractOAIPMHRepository {
     boolean exists = DC_SCHEMA.getMetadataPrefix().equals(prefix) || DATACITE_SCHEMA.getMetadataPrefix().equals(prefix);
     LOGGER.trace(prefix + ": " + exists);
     if (!exists) {
-      List<MetadataFormat> findAll = metadataFormatDao.findAll();
-      for (MetadataFormat item : findAll) {
-        LOGGER.trace("." + item.getMetadataPrefix());
-        if (prefix.equalsIgnoreCase(item.getMetadataPrefix())) {
-          exists = true;
-          break;
-        }
+      MetadataFormat metadataFormat = new MetadataFormat();
+      metadataFormat.setMetadataPrefix(prefix);
+      ExampleMatcher caseInsensitive = ExampleMatcher.matchingAll().withIgnoreCase();
+      Example<MetadataFormat> example = Example.of(metadataFormat, caseInsensitive);
+      Optional<MetadataFormat> findOne = metadataFormatDao.findOne(example);
+      if (findOne.isPresent()) {
+        MetadataFormat item = findOne.get();
+        LOGGER.trace("Found at least one item with prefix: " + item.getMetadataPrefix());
+        exists = true;
       }
     }
     return exists;
@@ -203,7 +201,6 @@ public class MetastoreOAIPMHRepository extends AbstractOAIPMHRepository {
   public void listSets(OAIPMHBuilder builder) {
     LOGGER.trace("Performing listSets().");
     //@TODO support collections?
-    //builder.addSet("default", "default");
     builder.addError(OAIPMHerrorcodeType.NO_SET_HIERARCHY, "Sets are currently not supported.");
   }
 
@@ -213,16 +210,21 @@ public class MetastoreOAIPMHRepository extends AbstractOAIPMHRepository {
     //@TODO extend by other formats
     builder.addMetadataFormat(DC_SCHEMA);
     builder.addMetadataFormat(DATACITE_SCHEMA);
-    List<MetadataFormat> allXmlSchemas = metadataFormatDao.findAll();
+    long noOfEntries = metadataFormatDao.count();
+    long entriesPerPage = 50;
+    long page = 0;
     // add also the schema registered in the schema registry
-    for (MetadataFormat metadataFormat : allXmlSchemas) {
-      MetadataFormatType item = new MetadataFormatType();
-      item.setMetadataNamespace(metadataFormat.getMetadataNamespace());
-      item.setMetadataPrefix(metadataFormat.getMetadataPrefix());
-      item.setSchema(metadataFormat.getSchema());
-      builder.addMetadataFormat(item);
-    }
-
+    do {
+      List<MetadataFormat> allXmlSchemas = metadataFormatDao.findAll(PageRequest.of((int) page, (int) entriesPerPage)).getContent();
+      for (MetadataFormat metadataFormat : allXmlSchemas) {
+        MetadataFormatType item = new MetadataFormatType();
+        item.setMetadataNamespace(metadataFormat.getMetadataNamespace());
+        item.setMetadataPrefix(metadataFormat.getMetadataPrefix());
+        item.setSchema(metadataFormat.getSchema());
+        builder.addMetadataFormat(item);
+      }
+      page++;
+    } while (page * entriesPerPage < noOfEntries);
   }
 
   @Override
@@ -238,14 +240,14 @@ public class MetastoreOAIPMHRepository extends AbstractOAIPMHRepository {
     }
 
     LOGGER.trace("Adding {} records to result.", results.size());
-    results.stream().forEach((result) -> {
+    results.stream().forEach(result -> {
       //TODO get proper date
-      Date changeDate = new Date(0l);
+      Date changeDate = new Date(0L);
       if (result.getLastUpdate() != null) {
         changeDate = Date.from(result.getLastUpdate());
       }
 
-      builder.addRecord(result.getMetadataId(), changeDate, Arrays.asList("default"));
+      builder.addRecord(result.getMetadataId(), changeDate, List.of("default"));
     });
   }
 
@@ -277,9 +279,7 @@ public class MetastoreOAIPMHRepository extends AbstractOAIPMHRepository {
       return;
     }
     LOGGER.trace("Adding {} records to result.", results.size());
-    results.stream().forEach((result) -> {
-      addRecordEntry(result, builder);
-    });
+    results.stream().forEach(result -> addRecordEntry(result, builder));
   }
 
   /**
@@ -307,10 +307,8 @@ public class MetastoreOAIPMHRepository extends AbstractOAIPMHRepository {
       LOGGER.info("Creating Dublin Core document on the fly.", object.getId());
       //create DC metadata
       try {
-        Function<String, String> dummy;
-        dummy = (t) -> {
-          return "dummy" + t;
-        };
+        UnaryOperator<String> dummy;
+        dummy = t -> "dummy" + t;
         edu.kit.datamanager.repo.domain.DataResource dr = DataResourceUtils.getResourceByIdentifierOrRedirect(metadataConfig, object.getMetadataId(), null, dummy);
         ElementContainer container = DublinCoreMapper.dataResourceToDublinCoreContainer(DataResourceUtils.migrateToDataResource(dr));
         JAXBContext jaxbContext = JAXBContext.newInstance(ElementContainer.class);
@@ -324,10 +322,8 @@ public class MetastoreOAIPMHRepository extends AbstractOAIPMHRepository {
     } else if (DATACITE_SCHEMA.getMetadataPrefix().equals(schemaId)) {
       LOGGER.info("Creating Datacite document on the fly.", object.getId());
       try {
-        Function<String, String> dummy;
-        dummy = (t) -> {
-          return "dummy" + t;
-        };
+        UnaryOperator<String> dummy;
+        dummy = t -> "dummy" + t;
         edu.kit.datamanager.repo.domain.DataResource dr = DataResourceUtils.getResourceByIdentifierOrRedirect(metadataConfig, object.getMetadataId(), null, dummy);
         // Todo check for internal related schema identifier switch to URL
         Resource resource = DataCiteMapper.dataResourceToDataciteResource(DataResourceUtils.migrateToDataResource(dr));
@@ -342,7 +338,7 @@ public class MetastoreOAIPMHRepository extends AbstractOAIPMHRepository {
     } else if (object.getSchemaId().equals(schemaId)) {
       LOGGER.info("Return stored document of resource '{}'.", object.getMetadataId());
       try {
-        URL url = new URL(object.getMetadataDocumentUri());
+        URL url = new URI(object.getMetadataDocumentUri()).toURL();
         byte[] readFileToByteArray = FileUtils.readFileToByteArray(Paths.get(url.toURI()).toFile());
         try (InputStream inputStream = new ByteArrayInputStream(readFileToByteArray)) {
           IOUtils.copy(inputStream, bout);
@@ -385,11 +381,11 @@ public class MetastoreOAIPMHRepository extends AbstractOAIPMHRepository {
     Document doc = getMetadataDocument(result, builder.getMetadataPrefix());
     if (doc != null) {
       LOGGER.trace("Adding record using obtained metadata document.");
-      Date resourceDate = new Date(0l);
+      Date resourceDate = new Date(0L);
       if (result.getLastUpdate() != null) {
         resourceDate = Date.from(result.getLastUpdate());
       }
-      builder.addRecord(result.getMetadataId(), resourceDate, Arrays.asList("default"), doc.getDocumentElement());
+      builder.addRecord(result.getMetadataId(), resourceDate, List.of("default"), doc.getDocumentElement());
     } else {
       LOGGER.error("No metadata document found for prefix {} and object identifier {}. Returning OAI-PMH error CANNOT_DISSEMINATE_FORMAT.", builder.getMetadataPrefix(), result.getId());
       builder.addError(OAIPMHerrorcodeType.CANNOT_DISSEMINATE_FORMAT, null);
@@ -429,6 +425,7 @@ public class MetastoreOAIPMHRepository extends AbstractOAIPMHRepository {
    *
    * @return A list of entities which might be empty.
    */
+  @SuppressWarnings("StringSplitter")
   private List<DataRecord> getEntities(OAIPMHBuilder builder) {
     List<DataRecord> results;
 
@@ -442,27 +439,23 @@ public class MetastoreOAIPMHRepository extends AbstractOAIPMHRepository {
     Instant until = builder.getUntilDate() != null ? builder.getUntilDate().toInstant() : Instant.now().plus(1, ChronoUnit.SECONDS);
     //check resumption token
     if (resumptionToken != null) {
+      String tokenValue = new String(Base64.decodeBase64(URLDecoder.decode(resumptionToken, StandardCharsets.UTF_8)), StandardCharsets.UTF_8);
+      LOGGER.trace("Found token with value {}", tokenValue);
+      String[] elements = tokenValue.split("/");
+      if (elements.length != 2) {
+        LOGGER.error("Invalid resumption token. Returning OAI-PMH error BAD_RESUMPTION_TOKEN.");
+        builder.addError(OAIPMHerrorcodeType.BAD_RESUMPTION_TOKEN, null);
+        return new ArrayList<>();
+      }
       try {
-        String tokenValue = new String(Base64.decodeBase64(URLDecoder.decode(resumptionToken, "UTF-8")));
-        LOGGER.trace("Found token with value {}", tokenValue);
-        String[] elements = tokenValue.split("/");
-        if (elements.length != 2) {
-          LOGGER.error("Invalid resumption token. Returning OAI-PMH error BAD_RESUMPTION_TOKEN.");
-          builder.addError(OAIPMHerrorcodeType.BAD_RESUMPTION_TOKEN, null);
-          return new ArrayList<>();
-        }
-        try {
-          LOGGER.trace("Parsing token values.");
-          currentCursor = Integer.parseInt(elements[0]);
-          overallCount = Integer.parseInt(elements[1]);
-          LOGGER.trace("Obtained {} as current cursor from token. Overall element count is {}.", currentCursor, overallCount);
-        } catch (NumberFormatException ex) {
-          //log error
-          builder.addError(OAIPMHerrorcodeType.BAD_RESUMPTION_TOKEN, null);
-          return new ArrayList<>();
-        }
-      } catch (UnsupportedEncodingException ex) {
-        LOGGER.error("Failed to get results from repository. Returning empty list.", ex);
+        LOGGER.trace("Parsing token values.");
+        currentCursor = Integer.parseInt(elements[0]);
+        overallCount = Integer.parseInt(elements[1]);
+        LOGGER.trace("Obtained {} as current cursor from token. Overall element count is {}.", currentCursor, overallCount);
+      } catch (NumberFormatException ex) {
+        //log error
+        builder.addError(OAIPMHerrorcodeType.BAD_RESUMPTION_TOKEN, null);
+        return new ArrayList<>();
       }
     } else {
       LOGGER.trace("No resumption token found.");
@@ -482,23 +475,23 @@ public class MetastoreOAIPMHRepository extends AbstractOAIPMHRepository {
       LOGGER.trace("findBySchemaIdAndLastUpdateBetween({},{},{}, Page({},{}))", findMetadataPrefix, from, until, page, maxElementsPerList);
       overallCount = dataRecordDao.countBySchemaIdInAndLastUpdateBetween(findMetadataPrefix, from, until);
       results = dataRecordDao.findBySchemaIdInAndLastUpdateBetween(findMetadataPrefix, from, until, PageRequest.of(page, maxElementsPerList));
-      LOGGER.trace("Found '" + results.size() + "' elements of '" + dataRecordDao.findAll().size() + "' elements in total!");
+      LOGGER.trace("Found '" + results.size() + "' elements of '" + dataRecordDao.count() + "' elements in total!");
     } else {
       LOGGER.trace("findBySchemaIdAndLastUpdateBetween({},{},{}, Page({},{}))", prefix, from, until, page, maxElementsPerList);
       overallCount = dataRecordDao.countBySchemaIdAndLastUpdateBetween(prefix, from, until);
       results = dataRecordDao.findBySchemaIdAndLastUpdateBetween(prefix, from, until, PageRequest.of(page, maxElementsPerList));
-      LOGGER.trace("Found '" + results.size() + "' elements of '" + dataRecordDao.findAll().size() + "' elements in total!");
+      LOGGER.trace("Found '" + results.size() + "' elements of '" + dataRecordDao.count() + "' elements in total!");
     }
     if (LOGGER.isTraceEnabled()) {
-         LOGGER.trace("List all items:");
-     List<DataRecord> findAll = dataRecordDao.findAll();
+      LOGGER.trace("List top 100 of all items:");
+      List<DataRecord> findAll = dataRecordDao.findAll(PageRequest.of(0, 100)).getContent();
       for (DataRecord item : findAll) {
         LOGGER.trace("-> " + item);
       }
     }
     LOGGER.trace("Setting next resumption token.");
     int cursor = currentCursor + results.size();
-            
+
     if (cursor == overallCount) {
       LOGGER.debug("New cursor {} exceeds element count {}, no more elements available. Setting resumption token to 'null'.", (currentCursor + maxElementsPerList), overallCount);
       //lsit complete, add no resumptiontoken
@@ -513,12 +506,8 @@ public class MetastoreOAIPMHRepository extends AbstractOAIPMHRepository {
       //we set no expiration as the token never expires
       String value = token.getCursor().intValue() + "/" + token.getCompleteListSize().intValue();
       LOGGER.trace("Setting resumption token value to {}.", value);
-      try {
-        token.setValue(URLEncoder.encode(Base64.encodeBase64String(value.getBytes()), "UTF-8"));
-        builder.setResumptionToken(token);
-      } catch (UnsupportedEncodingException ex) {
-        LOGGER.error("Failed to get results from repository. Returning empty list.", ex);
-      }
+      token.setValue(URLEncoder.encode(Base64.encodeBase64String(value.getBytes(StandardCharsets.UTF_8)), StandardCharsets.UTF_8));
+      builder.setResumptionToken(token);
     }
 
     return results;
